# budgetable.github.io

./: BUILDING.md  CHANGELOG.md  CNAME  README.md  all.js  all.min.js  budgetable.cabal  build-rapid.sh  build.sh  figlet  index.html  lib.js  make-pretty.sh  out.frefs.js  out.frefs.json  out.js  out.stats  stack.yaml
app/: Main.hs
nix/: base.nix
src/: AccountView.hs  BalancesView.hs  Chart.hs  DayView.hs  Debouncer.hs  DollarView.hs  Finance.hs  FinancePlanView.hs  Model.hs  ScheduledTransferView.hs  View.hs
src/Bootstrap/: Modal.hs  Popover.hs
src/Finance/: Account.hs  Balances.hs  DayOf.hs  Dollar.hs  Interest.hs  Plan.hs  Schedule.hs
src/Utils/: ChartChange.hs  List.hs
src/View/: Account.hs  Balances.hs  Day.hs  Dollar.hs  FinancePlan.hs  Interest.hs  Plan.hs  Progress.hs  Schedule.hs  ScheduledTransfer.hs  Test.hs
src/View/Day/: Modal.hs
