cabal-version:       2.4
name:                budgetable
version:             0.1.0.0

library
  exposed-modules:
      Chart
      Debouncer
      Finance
      Finance.Account
      Finance.DayOf
      Finance.Dollar
      Finance.Interest
      Finance.Plan
      Finance.Schedule
      View.Account
      View.Balances
      View.Day
      View.Dollar
      View.FinancePlan
      View.Interest
      View.Schedule
  hs-source-dirs:      src
  build-depends:
      base ^>=4.12.0.0
    , Shpadoinkle
    , Shpadoinkle-console
    , Shpadoinkle-html
    , Shpadoinkle-lens
    , aeson
    , attoparsec
    , binary
    , containers
    , deepseq
    , generic-lens
    , jsaddle
    , lens == 4.17.1
    , scientific
    , text
    , time == 1.8.0.2
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fwarn-identities
  ghcjs-options:
    -Wall
    -Werror
    -Wcompat
    -fno-warn-missing-home-modules
    -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fwarn-identities
    -O2
    

executable budgetable-app
  main-is:             Main.hs
  build-depends:
      base ^>=4.12.0.0
    , budgetable
    , Shpadoinkle
    , Shpadoinkle-backend-snabbdom
    , Shpadoinkle-html
    , Shpadoinkle-lens
    , aeson
    , attoparsec
    , base64-bytestring
    , binary
    , bytestring
    , containers
    , deepseq
    , generic-lens
    , ghcjs-base
    , jsaddle
    , lens == 4.17.1
    , stm
    , text
    , time == 1.8.0.2
    , unliftio
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fwarn-identities
  ghcjs-options:
    -Wall
    -Werror
    -Wcompat
    -fno-warn-missing-home-modules
    -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fwarn-identities
    -O2


